# kindledrop

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  README.md  TESTING.md  TEST_PLAN.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
app/: config.py  database.py  dependencies.py  main.py
app/api/: __init__.py  auth.py  dashboard.py  deliveries.py  recipes.py  settings.py  subscriptions.py
app/models/: __init__.py  base.py  delivery.py  recipe_cache.py  subscription.py  user.py
app/services/: __init__.py  auth.py  calibre.py  delivery.py  scheduler.py  smtp.py
app/static/css/: output.css
app/templates/: base.html  dashboard.html  forgot_password.html  history.html  login.html  reset_password.html  settings.html  setup.html
app/templates/components/: recent_activity.html  upcoming_deliveries.html
app/templates/recipes/: browser.html
app/templates/subscriptions/: form.html
app/ui/: routes.py
migrations/: env.py
migrations/versions/: b133e481ca26_initial_schema.py  f2dfeba084f8_add_password_reset_fields_to_user_model.py
scripts/: reset_password.py
tests/: conftest.py  test_api.py  test_calibre.py  test_delivery.py  test_scheduler.py  test_smtp.py  test_subscriptions_api.py
