[project]
name = "kindledrop"
version = "0.1.0"
description = "Self-hosted news delivery to Kindle via email"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.12",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.0.0",
    "passlib[bcrypt]>=1.7.4",
    "itsdangerous>=2.2.0",
    "aiosmtplib>=3.0.0",
    "apscheduler>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
